# nss-capstone

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: baseball.py  baseball2.py  eda.ipynb  mlb_team_stats.csv  mlbscraper.py  url_tester.py
