[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "pybaseball",
    "requests>=2.32.3",
    "selenium>=4.33.0",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]

[tool.uv.sources]
pybaseball = { path = "../../../../../dev/pybaseball", editable = true }
